# HomeProject

./: .coverage  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  database.py  graphql.py  main.py
app/auth/: api.py
app/auth/schemas/: request.py
app/foundation/: __init__.py  models.py  mutations.py  queries.py  resolvers.py  schemas.py  types.py
app/grant/: __init__.py  models.py  mutations.py  queries.py  resolvers.py  schemas.py  types.py
app/grant_feedback/: __init__.py  enums.py  models.py  mutations.py  queries.py  resolvers.py  types.py
app/user/: models.py
lib/: graphql.py  sqlalchemy.py  utils.py
lib/jwt/: bearer.py  manager.py
scripts/: db_seed.py
tests/app/: conftest.py
tests/app/auth/: test_api.py
tests/app/foundation/: conftest.py  test_graphql_mutations.py  test_graphql_queries.py
tests/app/grant/: conftest.py  test_graphql_mutations.py  test_graphql_queries.py
tests/app/grant_feedback/: conftest.py  test_graphql_mutations.py  test_graphql_queries.py
